--- a/style.css
+++ b/style.css
@@ -13,8 +13,10 @@ body {
     display: grid;
     height: 480px;
     width: 480px;
-    background-color: white;
+    background-color: red;
     margin: auto;
+    padding-top: 100px;
+
 }
 
 #toolbar {
@@ -31,12 +33,9 @@ body {
     width: 100px;
     border-radius: 50px;
     background-color: white;
-}
-
-#right-knob {
-    text-align: center;
     color: black;
-    word-wrap: break-word;
+    text-align: center;
+    line-height: 100px;
 }
 
 p{
@@ -48,12 +47,6 @@ p{
     border-color: black;
     border-style: solid;
     border-width: .5px;
+    background-color: white;
 }
 
-.drawn-black{
-    background-color: grey;
-}
-
-.drawn-rainbow{
-    background-color: blue;
-}
